fix page navigation breaks at work page

--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -12,14 +12,4 @@ body {
     overscroll-behavior-y: contain;
 }
 
-html,
-body,
-#root {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
 
